@@ -4,6 +4,8 @@ import com.project.model.User;
 import com.project.service.UserService;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
+import io.jsonwebtoken.security.Keys;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
@@ -12,9 +14,13 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.security.core.GrantedAuthority;
 
+import javax.crypto.SecretKey;
+import java.nio.charset.StandardCharsets;
 import java.util.Date;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/auth")
@@ -27,18 +33,24 @@ public class AuthController {
     @Value("${jwt.secret:defaultSecretKey}")
     private String jwtSecret;
 
+    @Autowired
     public AuthController(UserService userService, PasswordEncoder passwordEncoder, AuthenticationManager authenticationManager) {
         this.userService = userService;
         this.passwordEncoder = passwordEncoder;
         this.authenticationManager = authenticationManager;
     }
 
+
+
     @PostMapping("/register")
     public ResponseEntity<?> registerUser(@RequestBody User user) {
         if (userService.existsByUsername(user.getUsername())) {
             return ResponseEntity.badRequest().body("Username is already taken");
         }
-        user.setPassword(passwordEncoder.encode(user.getPassword()));
+        user.setUsername(user.getUsername().trim());
+        user.setPassword(user.getPassword().trim());
+
+        //user.setPassword(passwordEncoder.encode(user.getPassword()));
         userService.saveUser(user);
         return ResponseEntity.ok("User registered successfully");
     }
@@ -51,23 +63,28 @@ public class AuthController {
                 return ResponseEntity.badRequest().body("Invalid request payload");
             }
 
+            String username = credentials.get("username").trim();
+            String password = credentials.get("password").trim();
+
             // Authenticate the user
             Authentication authentication = authenticationManager.authenticate(
                     new UsernamePasswordAuthenticationToken(
-                            credentials.get("username"),
-                            credentials.get("password")
+                            username,
+                            password
                     )
             );
 
             // Generate JWT token
+            SecretKey key = Keys.hmacShaKeyFor(jwtSecret.getBytes(StandardCharsets.UTF_8));
+
             String jwtToken = Jwts.builder()
                     .setSubject(authentication.getName())
                     .claim("roles", authentication.getAuthorities().stream()
-                            .map(grantedAuthority -> grantedAuthority.getAuthority())
-                            .toList())
+                            .map(GrantedAuthority::getAuthority)
+                            .collect(Collectors.toList()))
                     .setIssuedAt(new Date())
                     .setExpiration(new Date(System.currentTimeMillis() + 864_000_000))
-                    .signWith(SignatureAlgorithm.HS256, jwtSecret.getBytes())
+                    .signWith(key)
                     .compact();
 
             // Set Authorization header
@@ -82,6 +99,7 @@ public class AuthController {
                             "message", "Login successful"
                     ));
         } catch (AuthenticationException e) {
+            //logger.warn("Authentication failed for user {}: {}", credentials.get("username"), e.getMessage());
             return ResponseEntity.status(401).body("Invalid username or password");
         }
     }
